# audioground

./: .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/workflows/: publish.yaml
.husky/: pre-commit
python/: labeler.py  labeler_test.py  main.py
src/: App.js  App.test.tsx  App.tsx  Interface.test.tsx  Interface.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/mocks/: test.json
src-tauri/python/: labeler.py  main.py  requirements.txt
src-tauri/python/tests/: labeler_test.py
src-tauri/src/: fscanner.rs  main.rs  metaprobe.rs
src/components/: AudioPlayer.tsx  Combobox.tsx  RunStatus.tsx  Search.tsx  TableContextMenu.tsx  Toolbar.tsx
src/components/Loader/: index.tsx  styles.css
src/components/Table/: cols.ts  index.tsx  rows.ts  theme.css  theme.module.css
src/components/Table/renderers/: ActionsCellRenderer.tsx  AlbumArt.tsx  (+5 more)
src/components/Titlebar/: index.tsx  style.css
src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  context-menu.tsx  dialog.tsx
src/lib/: types.ts
src/lib/config/: cmd.ts  paths.ts  tags.ts
src/lib/hooks/: useComboboxState.ts  useDarkMode.ts  useEventCallback.ts  useLocalStorage.ts  useOnMount.ts  useRows.ts  useTagRunner.ts
src/lib/providers/: AudioProvider.tsx  ThemeProvider.tsx
src/lib/shell/: python.ts  runner.ts
src/lib/store/: preferences.ts  thumbnails.ts  tracks.ts
src/lib/utils/: fs.ts  thumbnail.ts
src/views/: Home.tsx
